# parcial_db

./: Makefile  docker-compose.yml
backend_api/: .env.example  Dockerfile  README.md  pyproject.toml
backend_api/app/: config.py  database.py  main.py
backend_api/app/models/: __init__.py  match.py  team.py
backend_api/app/routers/: matches.py  teams.py
backend_api/app/schemas/: match.py  team.py
backend_api/app/utils/: seed_data.py  validators.py
frontend_parcial/: index.html  package-lock.json  package.json
frontend_parcial/src/: App.jsx  AppRoutes.jsx  index.css  main.jsx
frontend_parcial/src/components/: AppModal.jsx  ConfirmDialog.jsx  GroupFilter.jsx  SectionHero.jsx
frontend_parcial/src/components/forms/: MatchCreateModal.jsx  MatchGoalsModal.jsx  TeamFormModal.jsx
frontend_parcial/src/data/: groupOptions.js  mockTournamentData.js  routeDictionary.js
frontend_parcial/src/pages/: EncuentroDetailPage.jsx  EncuentrosPage.jsx  EquiposPage.jsx  GruposPage.jsx  HomePage.jsx  NotFoundPage.jsx
frontend_parcial/src/services/: apiClient.js  apiStatusService.js  browserStorage.js  matchService.js  teamService.js
frontend_parcial/src/utils/: tournament.js
