[project]
name = "backend-api"
version = "0.1.0"
description = "API REST de fase de grupos con FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic-settings>=2.8.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
